# ksfoundation-platform

./: .gitignore  COMPREHENSIVE_IMPROVEMENT_PLAN.md  DEPLOYMENT_SUCCESS_REPORT.md  Dockerfile  IMPLEMENTATION_GUIDE.md  PDR.md  PROJECT_STATUS_REPORT.md  QUICK_START.md  TODO.md  antigravity_verify.ts  apply_improvements.sh  brainstorm_plan.md  bun.lockb  check_db.py  check_providers.ts  check_supabase.ts  coolify.yaml  docker-compose.yml  frontend_test_results.txt  index.html  lint_output.txt  nginx.conf  nixpacks.toml  package-lock.json  package.json  playwright.config.ts  setup_mission_i18n.sh  stats.html  tailwind.config.ts  universal_deploy.sh  vite.config.ts
backend/: .env.example  Dockerfile  README.md  ksf_ai.db  pyproject.toml  requirements.txt  test_config.py  verify_db.py
backend/app/: main.py
backend/app/ai/: core.py  mcp_client.py  models.py
backend/app/auth/: local_auth.py
backend/app/core/: config.py  database.py  security.py
backend/app/routers/: api.py  auth.py  hosting.py  intelligence.py
backend/app/services/: app_store.py  domain.py  firewall.py  gcp_manager.py  k3s_manager.py  node_manager.py  provisioning.py  workflow.py
backend/app/services/data/: commerce.py  google.py  identity.py  social.py
backend/tests/: test_main.py
database/: project_management_schema.sql  schema.sql  todo_schema.sql
e2e/: auth.spec.ts
electron/: main.cjs
playwright-report/: index.html
public/: manifest.json  sitemap.xml  sw.js  test.html
src/: App.test.tsx  App.tsx  i18n.ts  index.css  main.tsx
src/contexts/: AuthContext.tsx
src/lib/: api.ts  (+8 more)
(+81 files in other folders)
