[project]
name = "ksfoundation-backend"
version = "0.1.0"
description = "High-performance AI Backend for KSF Platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "pydantic-ai>=0.0.1",
    "mcp>=0.1.0",
    "openai>=1.10.0",
    "anthropic>=0.18.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.26.0",
    "python-multipart>=0.0.9",
    "redis>=5.0.1",
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "langchain>=0.1.0",
    "langgraph>=0.0.10",
    "docker>=7.0.0",
    "paramiko>=3.4.0",
    "google-cloud-compute>=1.0.0",
    "googlemaps>=4.0.0",
    "beautifulsoup4>=4.12.0",
    "aiosqlite>=0.22.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "black>=24.1.0"
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.hatch.build.targets.wheel]
packages = ["app"]
